kubernetes/nextcloud/email/email.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-sender
  namespace: nextcloud
  labels:
    app: email-sender
    sablier.enable: "true"
    sablier.group: nextcloud
spec:
  autoscaler:
    enabled: true
    minReplicas: 0
    maxReplicas: 1
  selector:
    matchLabels:
      app: email-sender
  template:
    metadata:
      labels:
        app: email-sender
    spec:    
      containers:
      - name: email-sender
        resources:
        image: namshi/smtp
        ports:
        - name: smtp
          containerPort: 25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-email
  namespace: nextcloud
  labels:
    app: nextcloud-email
    sablier.enable: "true"
    sablier.group: nextcloud
spec:
  autoscaler:
    enabled: true
    minReplicas: 0
    maxReplicas: 1
  selector:
    matchLabels:
      app: nextcloud-email
  template:
    metadata:
      labels:
        app: nextcloud-email
    spec:    
      volumes:
      # - name: email-volume
      #   persistentVolumeClaim:
      #     claimName: email-claim
      - name: email-config-volume
        configMap:
          name: email-config
          items:
          - key: config.json
            path: config.json
          defaultMode: 0744
      containers:
      - name: email
        image: djfarrelly/maildev
        ports:
        - name: smtp
          containerPort: 25
        - name: http
          containerPort: 80
        command:
          - "bin/maildev"
          - "--web=80"
          - "--smtp=25"
          - "--outgoing-host=email-sender"
          - "--outgoing-user=admin@la1r.com"
          - "--auto-relay"
          - "--auto-relay-rules=/var/email/config.json"
        # args:

        # env:
        # - name: MAILNAME
        #   value: "admin.bas"
        # - name: PORT 
        #   value: "8025"
        # - name: MH_MAILDIR_PATH 
        #   value: "/email"
        # - name: MH_OUTGOING_SMTP 
        #   value: "/var/email/config.json"
        volumeMounts:
          - name: email-config-volume
            mountPath: "/var/email/config.json"
            subPath: "config.json"
          # - name: email-volume
          #   mountPath: "/email"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-sender
  name: email-sender
  namespace: nextcloud
spec:
  ports:
  - name: smtp
    targetPort: 25
    port: 25
  selector:
    app: email-sender
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud-email
  name: nextcloud-email
  namespace: nextcloud
spec:
  ports:
  - name: smtp
    targetPort: 25
    port: 25
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nextcloud-email
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-email-https
  namespace: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: nextcloud-email-bas-tls
  rules:
  - host: nextcloud-email.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-email
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-email-http
  namespace: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
spec:
  rules:
  - host: nextcloud-email.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-email
            port:
              number: 80
